dnl
dnl Part of: Nausicaa/Curl
dnl Contents: configuration curl
dnl Date: Mon Nov 16, 2009
dnl
dnl Abstract
dnl
dnl
dnl
dnl Copyright (c) 2009 Marco Maggi <marco.maggi-ipsu@poste.it>
dnl
dnl This  program  is free  software:  you  can redistribute  it
dnl and/or modify it  under the terms of the  GNU General Public
dnl License as published by the Free Software Foundation, either
dnl version  3 of  the License,  or (at  your option)  any later
dnl version.
dnl
dnl This  program is  distributed in  the hope  that it  will be
dnl useful, but  WITHOUT ANY WARRANTY; without  even the implied
dnl warranty  of  MERCHANTABILITY or  FITNESS  FOR A  PARTICULAR
dnl PURPOSE.   See  the  GNU  General Public  License  for  more
dnl details.
dnl
dnl You should  have received a  copy of the GNU  General Public
dnl License   along   with    this   program.    If   not,   see
dnl <http://www.gnu.org/licenses/>.
dnl

dnl page
dnl --------------------------------------------------------------------
dnl Setup.
dnl --------------------------------------------------------------------

AC_INIT([nausicaa-curl],[0.1d0],[marco.maggi-ipsu@poste.it])
DS_BEGIN([./src/libraries/foreign/net/curl.sls])
AC_CANONICAL_TARGET
NAUSICAA_BEGIN
DS_EXCLUDE_SECTION([CONFIG_INSPECTION_SCRIPT])
DS_EXCLUDE_SECTION([AUTOCONF])
DS_EXCLUDE_SECTION([PKGCONFIG])
NAUSICAA_SCHEME_CHECK_LIBRARY([NAU_FOREIGN],[(foreign ffi)])
NAUSICAA_C_LANGUAGE
AC_CHECK_HEADERS([curl/curl.h],,[AC_MSG_FAILURE([cannot find Curl headers],[2])])
AC_CHECK_LIB([curl],[curl_global_init],,[AC_MSG_FAILURE([cannot find Curl library],[2])])
NAUSICAA_SIZEOF

AC_CHECK_HEADER([ioctl.h])

dnl page
dnl --------------------------------------------------------------------
dnl Helper functions.
dnl --------------------------------------------------------------------

m4_define([NAU_CURL_INCLUDES],[
#include <curl/curl.h>
])

AC_DEFUN([NAU_CURL_INSPECT_TYPE],
  [NAUSICAA_INSPECT_TYPE([$1],[$2],[$3],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_INSPECT_STRUCT_TYPE],
  [NAUSICAA_INSPECT_STRUCT_TYPE([$1],[$2],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_INSPECT_FIELD_TYPE],
  [NAUSICAA_INSPECT_FIELD_TYPE([$1],[$2],[$3],[$4],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_INSPECT_FIELD_TYPE_POINTER],
  [NAUSICAA_INSPECT_FIELD_TYPE_POINTER([$1],[$2],[$3],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_ENUM_VALUE],
  [NAU_CURL_VALUEOF_TEST([$1],[$1])])

AC_DEFUN([NAU_CURL_DEFINE_VALUE],
  [NAU_CURL_VALUEOF_TEST([$1],[$1])])

AC_DEFUN([NAU_CURL_DEFINE_STRING],
  [NAUSICAA_STRING_TEST([$1],[$1],[#f],[NAU_CURL_INCLUDES])])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_SIZEOF_TEST],
  [NAUSICAA_SIZEOF_TEST([$1],[$2],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_VALUEOF_TEST],
  [NAUSICAA_VALUEOF_TEST([$1],[$2],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_OFFSETOF_FIELD_TEST],
  [NAUSICAA_OFFSETOF_FIELD_TEST([$1],[$2],[$3],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_STRUCT_FIELD],
  [NAUSICAA_INSPECT_FIELD_TYPE([$1],[$2],[$3],[$4],,[NAU_CURL_INCLUDES])])

dnl --------------------------------------------------------------------

m4_define([NAU_POSIX_INCLUDES],[
#ifdef HAVE_FCNTL_H
#  include <fcntl.h>
#endif
])

AC_DEFUN([NAU_POSIX_DEFINE_VALUE],
  [NAUSICAA_VALUEOF_TEST([$1],[$1],[0],[NAU_POSIX_INCLUDES])])


dnl page
dnl --------------------------------------------------------------------
dnl Data types inspection.
dnl --------------------------------------------------------------------

NAU_CURL_INSPECT_TYPE([CURL_SOCKET],[curl_socket_t],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_OFF],[curl_off_t],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLSOCKTYPE],[curlsocktype],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLIOERR],[curlioerr],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLIOCMD],[curliocmd],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_INFOTYPE],[curl_infotype],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLCODE],[CURLcode],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_PROXYTYPE],[curl_proxytype],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_KHSTAT],[enum curl_khstat],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_KHMATCH],[enum curl_khmatch],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_USESSL],[curl_usessl],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_FTPCCC],[curl_ftpccc],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_FTPAUTH],[curl_ftpauth],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_FTPCREATEDIR],[curl_ftpcreatedir],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_FTPMETHOD],[curl_ftpmethod],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLOPTION],[CURLoption],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_NETRC_OPTION],[enum CURL_NETRC_OPTION],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_TIMECOND],[curl_TimeCond],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLFORMOPTION],[CURLformoption],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLFORMCODE],[CURLFORMcode],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLINFO],[CURLINFO],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_CLOSEPOLICY],[curl_closepolicy],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_LOCK_DATA],[curl_lock_data],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_LOCK_ACCESS],[curl_lock_access],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLSHCODE],[CURLSHcode],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLSHOPTION],[CURLSHoption],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLVERSION],[CURLversion],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLMCODE],[CURLMcode],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLMSG],[CURLMSG],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLMOPTION],[CURLMoption],[signed-int])

dnl page
dnl --------------------------------------------------------------------
dnl Data structures type inspection.
dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_HTTPPOST_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_HTTPPOST_$1],[struct curl_httppost],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_HTTPPOST],[struct curl_httppost])
NAU_CURL_HTTPPOST_FIELD([NEXT],[next],[pointer])
NAU_CURL_HTTPPOST_FIELD([NAME],[name],[pointer])
NAU_CURL_HTTPPOST_FIELD([NAMELENGTH],[namelength],[signed-int])
NAU_CURL_HTTPPOST_FIELD([CONTENTS],[contents],[pointer])
NAU_CURL_HTTPPOST_FIELD([CONTENTSLENGTH],[contentslength],[signed-int])
NAU_CURL_HTTPPOST_FIELD([BUFFER],[buffer],[pointer])
NAU_CURL_HTTPPOST_FIELD([BUFFERLENGTH],[bufferlength],[signed-int])
NAU_CURL_HTTPPOST_FIELD([CONTENTTYPE],[contenttype],[pointer])
NAU_CURL_HTTPPOST_FIELD([CONTENTTYPE],[contenttype],[pointer])
NAU_CURL_HTTPPOST_FIELD([CONTENTHEADER],[contentheader],[pointer])
NAU_CURL_HTTPPOST_FIELD([MORE],[more],[pointer])
NAU_CURL_HTTPPOST_FIELD([FLAGS],[flags],[signed-int])
NAU_CURL_HTTPPOST_FIELD([SHOWFILENAME],[showfilename],[pointer])
NAU_CURL_HTTPPOST_FIELD([USERP],[userp],[pointer])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_SOCKADDR_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_SOCKADDR_$1],[struct curl_sockaddr],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_SOCKADDR],[struct curl_sockaddr])
NAU_CURL_SOCKADDR_FIELD([FAMILY],[family],[signed-int])
NAU_CURL_SOCKADDR_FIELD([SOCKTYPE],[socktype],[signed-int])
NAU_CURL_SOCKADDR_FIELD([PROTOCOL],[protocol],[signed-int])
NAU_CURL_SOCKADDR_FIELD([ADDRLEN],[addrlen],[signed-int])
NAU_CURL_INSPECT_FIELD_TYPE_POINTER([CURL_SOCKADDR_ADDR],[struct curl_sockaddr],[addr])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_KHKEY_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_KHKEY_$1],[struct curl_khkey],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_KHKEY],[struct curl_khkey])
NAU_CURL_KHKEY_FIELD([KEY],[key],[pointer])
NAU_CURL_KHKEY_FIELD([LEN],[len],[unsigned-int])
NAU_CURL_KHKEY_FIELD([KEYTYPE],[keytype],[signed-int])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_FORMS_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_FORMS_$1],[struct curl_forms],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_FORMS],[struct curl_forms])
NAU_CURL_FORMS_FIELD([OPTION],[option],[signed-int])
NAU_CURL_FORMS_FIELD([VALUE],[value],[pointer])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_SLIST_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_SLIST_$1],[struct curl_slist],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_SLIST],[struct curl_slist])
NAU_CURL_SLIST_FIELD([DATA],[data],[pointer])
NAU_CURL_SLIST_FIELD([NEXT],[next],[pointer])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_CERTINFO_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_CERTINFO_$1],[struct curl_certinfo],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_CERTINFO],[struct curl_certinfo])
NAU_CURL_CERTINFO_FIELD([NUM_OF_CERTS],[num_of_certs],[signed-int])
NAU_CURL_CERTINFO_FIELD([CERTINFO],[certinfo],[pointer])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_VERSION_INFO_DATA_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_VERSION_INFO_DATA_$1],[curl_version_info_data],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_VERSION_INFO_DATA],[curl_version_info_data])
NAU_CURL_VERSION_INFO_DATA_FIELD([AGE],[age],[signed-int])
NAU_CURL_VERSION_INFO_DATA_FIELD([VERSION],[version],[pointer])
NAU_CURL_VERSION_INFO_DATA_FIELD([VERSION_NUM],[version_num],[signed-int])
NAU_CURL_VERSION_INFO_DATA_FIELD([HOST],[host],[pointer])
NAU_CURL_VERSION_INFO_DATA_FIELD([FEATURES],[features],[signed-int])
NAU_CURL_VERSION_INFO_DATA_FIELD([SSL_VERSION],[ssl_version],[pointer])
NAU_CURL_VERSION_INFO_DATA_FIELD([SSL_VERSION_NUM],[ssl_version_num],[signed-int])
NAU_CURL_VERSION_INFO_DATA_FIELD([LIBZ_VERSION],[libz_version],[pointer])
NAU_CURL_VERSION_INFO_DATA_FIELD([PROTOCOLS],[protocols],[pointer])
NAU_CURL_VERSION_INFO_DATA_FIELD([ARES],[ares],[pointer])
NAU_CURL_VERSION_INFO_DATA_FIELD([ARES_NUM],[ares_num],[signed-int])
NAU_CURL_VERSION_INFO_DATA_FIELD([LIBIDN],[libidn],[pointer])
NAU_CURL_VERSION_INFO_DATA_FIELD([ICONV_VER_NUM],[iconv_ver_num],[signed-int])
NAU_CURL_VERSION_INFO_DATA_FIELD([LIBSSH_VERSION],[libssh_version],[pointer])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_CURLMSG_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURLMSG_$1],[CURLMsg],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_CURLMSG],[CURLMsg])
NAU_CURL_CURLMSG_FIELD([MSG],[msg],[signed-int])
NAU_CURL_CURLMSG_FIELD([EASY_HANDLE],[easy_handle],[pointer])
NAU_CURL_CURLMSG_FIELD([WHATEVER],[data.whatever],[pointer])
NAU_CURL_CURLMSG_FIELD([RESULT],[data.result],[signed-int])



dnl page
dnl --------------------------------------------------------------------
dnl Constants.
dnl --------------------------------------------------------------------

NAU_POSIX_DEFINE_VALUE([SEEK_SET])
NAU_POSIX_DEFINE_VALUE([SEEK_CUR])
NAU_POSIX_DEFINE_VALUE([SEEK_END])

dnl miscellaneous constants
NAU_CURL_DEFINE_VALUE([CURL_SOCKET_BAD])
NAU_CURL_DEFINE_VALUE([CURL_MAX_WRITE_SIZE])
NAU_CURL_DEFINE_VALUE([CURL_MAX_HTTP_HEADER])
NAU_CURL_DEFINE_VALUE([CURL_WRITEFUNC_PAUSE])

NAU_CURL_DEFINE_VALUE([CURL_IPRESOLVE_WHATEVER])
NAU_CURL_DEFINE_VALUE([CURL_IPRESOLVE_V4])
NAU_CURL_DEFINE_VALUE([CURL_IPRESOLVE_V6])

NAU_CURL_DEFINE_VALUE([CURLOPT_WRITEDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_READDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_HEADERDATA])

NAU_CURL_DEFINE_VALUE([CURL_HTTP_VERSION_NONE])
NAU_CURL_DEFINE_VALUE([CURL_HTTP_VERSION_1_0])
NAU_CURL_DEFINE_VALUE([CURL_HTTP_VERSION_1_1])
NAU_CURL_DEFINE_VALUE([CURL_HTTP_VERSION_LAST])

NAU_CURL_DEFINE_VALUE([CURL_SSLVERSION_DEFAULT])
NAU_CURL_DEFINE_VALUE([CURL_SSLVERSION_TLSv1])
NAU_CURL_DEFINE_VALUE([CURL_SSLVERSION_SSLv2])
NAU_CURL_DEFINE_VALUE([CURL_SSLVERSION_SSLv3])
NAU_CURL_DEFINE_VALUE([CURL_SSLVERSION_LAST])

NAU_CURL_DEFINE_VALUE([CURL_REDIR_GET_ALL])
NAU_CURL_DEFINE_VALUE([CURL_REDIR_POST_301])
NAU_CURL_DEFINE_VALUE([CURL_REDIR_POST_302])
NAU_CURL_DEFINE_VALUE([CURL_REDIR_POST_ALL])

NAU_CURL_DEFINE_VALUE([CURL_GLOBAL_SSL])
NAU_CURL_DEFINE_VALUE([CURL_GLOBAL_WIN32])
NAU_CURL_DEFINE_VALUE([CURL_GLOBAL_ALL])
NAU_CURL_DEFINE_VALUE([CURL_GLOBAL_NOTHING])
NAU_CURL_DEFINE_VALUE([CURL_GLOBAL_DEFAULT])

NAU_CURL_DEFINE_VALUE([CURLPAUSE_RECV])
NAU_CURL_DEFINE_VALUE([CURLPAUSE_RECV_CONT])
NAU_CURL_DEFINE_VALUE([CURLPAUSE_SEND])
NAU_CURL_DEFINE_VALUE([CURLPAUSE_SEND_CONT])
NAU_CURL_DEFINE_VALUE([CURLPAUSE_ALL])
NAU_CURL_DEFINE_VALUE([CURLPAUSE_CONT])

NAU_CURL_DEFINE_VALUE([CURL_POLL_NONE])
NAU_CURL_DEFINE_VALUE([CURL_POLL_IN])
NAU_CURL_DEFINE_VALUE([CURL_POLL_OUT])
NAU_CURL_DEFINE_VALUE([CURL_POLL_INOUT])
NAU_CURL_DEFINE_VALUE([CURL_POLL_REMOVE])

NAU_CURL_DEFINE_VALUE([CURL_SOCKET_TIMEOUT])

NAU_CURL_DEFINE_VALUE([CURL_CSELECT_IN])
NAU_CURL_DEFINE_VALUE([CURL_CSELECT_OUT])
NAU_CURL_DEFINE_VALUE([CURL_CSELECT_ERR])


dnl version informations
NAU_CURL_DEFINE_STRING([LIBCURL_COPYRIGHT])
NAU_CURL_DEFINE_STRING([LIBCURL_TIMESTAMP])

NAU_CURL_DEFINE_VALUE([LIBCURL_VERSION_MAJOR])
NAU_CURL_DEFINE_VALUE([LIBCURL_VERSION_MINOR])
NAU_CURL_DEFINE_VALUE([LIBCURL_VERSION_PATCH])
NAU_CURL_DEFINE_VALUE([LIBCURL_VERSION_NUM])

dnl flag values for the "flags" field of structure "curl_httppost"
NAU_CURL_DEFINE_VALUE([HTTPPOST_FILENAME])
NAU_CURL_DEFINE_VALUE([HTTPPOST_READFILE])
NAU_CURL_DEFINE_VALUE([HTTPPOST_PTRNAME])
NAU_CURL_DEFINE_VALUE([HTTPPOST_PTRCONTENTS])
NAU_CURL_DEFINE_VALUE([HTTPPOST_BUFFER])
NAU_CURL_DEFINE_VALUE([HTTPPOST_PTRBUFFER])
NAU_CURL_DEFINE_VALUE([HTTPPOST_CALLBACK])

dnl return codes for the seek callbacks
NAU_CURL_DEFINE_VALUE([CURL_SEEKFUNC_OK])
NAU_CURL_DEFINE_VALUE([CURL_SEEKFUNC_FAIL])
NAU_CURL_DEFINE_VALUE([CURL_SEEKFUNC_CANTSEEK])

dnl return codes for the read callbacks
NAU_CURL_DEFINE_VALUE([CURL_READFUNC_ABORT])
NAU_CURL_DEFINE_VALUE([CURL_READFUNC_PAUSE])

dnl enum curlsocktype
NAU_CURL_DEFINE_VALUE([CURLSOCKTYPE_IPCXN])
NAU_CURL_DEFINE_VALUE([CURLSOCKTYPE_LAST])

dnl enum curlioerr
NAU_CURL_DEFINE_VALUE([CURLIOE_OK])
NAU_CURL_DEFINE_VALUE([CURLIOE_UNKNOWNCMD])
NAU_CURL_DEFINE_VALUE([CURLIOE_FAILRESTART])
NAU_CURL_DEFINE_VALUE([CURLIOE_LAST])

dnl enum curliocmd
NAU_CURL_DEFINE_VALUE([CURLIOCMD_NOP])
NAU_CURL_DEFINE_VALUE([CURLIOCMD_RESTARTREAD])
NAU_CURL_DEFINE_VALUE([CURLIOCMD_LAST])

dnl enum curl_infotype
NAU_CURL_DEFINE_VALUE([CURLINFO_TEXT])
NAU_CURL_DEFINE_VALUE([CURLINFO_HEADER_IN])
NAU_CURL_DEFINE_VALUE([CURLINFO_HEADER_OUT])
NAU_CURL_DEFINE_VALUE([CURLINFO_DATA_IN])
NAU_CURL_DEFINE_VALUE([CURLINFO_DATA_OUT])
NAU_CURL_DEFINE_VALUE([CURLINFO_SSL_DATA_IN])
NAU_CURL_DEFINE_VALUE([CURLINFO_SSL_DATA_OUT])
NAU_CURL_DEFINE_VALUE([CURLINFO_END])

dnl enum CURLcode
NAU_CURL_DEFINE_VALUE([CURLE_OK])
NAU_CURL_DEFINE_VALUE([CURLE_UNSUPPORTED_PROTOCOL])
NAU_CURL_DEFINE_VALUE([CURLE_FAILED_INIT])
NAU_CURL_DEFINE_VALUE([CURLE_URL_MALFORMAT])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE4])
NAU_CURL_DEFINE_VALUE([CURLE_COULDNT_RESOLVE_PROXY])
NAU_CURL_DEFINE_VALUE([CURLE_COULDNT_RESOLVE_HOST])
NAU_CURL_DEFINE_VALUE([CURLE_COULDNT_CONNECT])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_WEIRD_SERVER_REPLY])
NAU_CURL_DEFINE_VALUE([CURLE_REMOTE_ACCESS_DENIED])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE10])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_WEIRD_PASS_REPLY])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE12])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_WEIRD_PASV_REPLY])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_WEIRD_227_FORMAT])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_CANT_GET_HOST])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE16])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_COULDNT_SET_TYPE])
NAU_CURL_DEFINE_VALUE([CURLE_PARTIAL_FILE])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_COULDNT_RETR_FILE])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE20])
NAU_CURL_DEFINE_VALUE([CURLE_QUOTE_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_HTTP_RETURNED_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_WRITE_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE24])
NAU_CURL_DEFINE_VALUE([CURLE_UPLOAD_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_READ_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_OUT_OF_MEMORY])
NAU_CURL_DEFINE_VALUE([CURLE_OPERATION_TIMEDOUT])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE29])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_PORT_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_COULDNT_USE_REST])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE32])
NAU_CURL_DEFINE_VALUE([CURLE_RANGE_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_HTTP_POST_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CONNECT_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_BAD_DOWNLOAD_RESUME])
NAU_CURL_DEFINE_VALUE([CURLE_FILE_COULDNT_READ_FILE])
NAU_CURL_DEFINE_VALUE([CURLE_LDAP_CANNOT_BIND])
NAU_CURL_DEFINE_VALUE([CURLE_LDAP_SEARCH_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE40])
NAU_CURL_DEFINE_VALUE([CURLE_FUNCTION_NOT_FOUND])
NAU_CURL_DEFINE_VALUE([CURLE_ABORTED_BY_CALLBACK])
NAU_CURL_DEFINE_VALUE([CURLE_BAD_FUNCTION_ARGUMENT])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE44])
NAU_CURL_DEFINE_VALUE([CURLE_INTERFACE_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE46])
NAU_CURL_DEFINE_VALUE([CURLE_TOO_MANY_REDIRECTS])
NAU_CURL_DEFINE_VALUE([CURLE_UNKNOWN_TELNET_OPTION])
NAU_CURL_DEFINE_VALUE([CURLE_TELNET_OPTION_SYNTAX])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE50])
NAU_CURL_DEFINE_VALUE([CURLE_PEER_FAILED_VERIFICATION])
NAU_CURL_DEFINE_VALUE([CURLE_GOT_NOTHING])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_ENGINE_NOTFOUND])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_ENGINE_SETFAILED])
NAU_CURL_DEFINE_VALUE([CURLE_SEND_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_RECV_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE57])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CERTPROBLEM])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CIPHER])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CACERT])
NAU_CURL_DEFINE_VALUE([CURLE_BAD_CONTENT_ENCODING])
NAU_CURL_DEFINE_VALUE([CURLE_LDAP_INVALID_URL])
NAU_CURL_DEFINE_VALUE([CURLE_FILESIZE_EXCEEDED])
NAU_CURL_DEFINE_VALUE([CURLE_USE_SSL_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_SEND_FAIL_REWIND])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_ENGINE_INITFAILED])
NAU_CURL_DEFINE_VALUE([CURLE_LOGIN_DENIED])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_NOTFOUND])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_PERM])
NAU_CURL_DEFINE_VALUE([CURLE_REMOTE_DISK_FULL])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_ILLEGAL])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_UNKNOWNID])
NAU_CURL_DEFINE_VALUE([CURLE_REMOTE_FILE_EXISTS])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_NOSUCHUSER])
NAU_CURL_DEFINE_VALUE([CURLE_CONV_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_CONV_REQD])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CACERT_BADFILE])
NAU_CURL_DEFINE_VALUE([CURLE_REMOTE_FILE_NOT_FOUND])
NAU_CURL_DEFINE_VALUE([CURLE_SSH])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_SHUTDOWN_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_AGAIN])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CRL_BADFILE])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_ISSUER_ERROR])
NAU_CURL_DEFINE_VALUE([CURL_LAST])

dnl enum curl_proxytype
NAU_CURL_DEFINE_VALUE([CURLPROXY_HTTP])
NAU_CURL_DEFINE_VALUE([CURLPROXY_HTTP_1_0])
NAU_CURL_DEFINE_VALUE([CURLPROXY_SOCKS4])
NAU_CURL_DEFINE_VALUE([CURLPROXY_SOCKS5])
NAU_CURL_DEFINE_VALUE([CURLPROXY_SOCKS4A])
NAU_CURL_DEFINE_VALUE([CURLPROXY_SOCKS5_HOSTNAME])

dnl auth constants
NAU_CURL_DEFINE_VALUE([CURLAUTH_NONE])
NAU_CURL_DEFINE_VALUE([CURLAUTH_BASIC])
NAU_CURL_DEFINE_VALUE([CURLAUTH_DIGEST])
NAU_CURL_DEFINE_VALUE([CURLAUTH_GSSNEGOTIATE])
NAU_CURL_DEFINE_VALUE([CURLAUTH_NTLM])
NAU_CURL_DEFINE_VALUE([CURLAUTH_DIGEST_IE])
NAU_CURL_DEFINE_VALUE([CURLAUTH_ANY])
NAU_CURL_DEFINE_VALUE([CURLAUTH_ANYSAFE])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_ANY])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_NONE])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_PUBLICKEY])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_PASSWORD])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_HOST])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_KEYBOARD])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_DEFAULT])
NAU_CURL_DEFINE_VALUE([CURL_ERROR_SIZE])

dnl enum keytype
NAU_CURL_DEFINE_VALUE([CURLKHTYPE_UNKNOWN])
NAU_CURL_DEFINE_VALUE([CURLKHTYPE_RSA1])
NAU_CURL_DEFINE_VALUE([CURLKHTYPE_RSA])
NAU_CURL_DEFINE_VALUE([CURLKHTYPE_DSS])

dnl enum curl_khstat
NAU_CURL_DEFINE_VALUE([CURLKHSTAT_FINE_ADD_TO_FILE])
NAU_CURL_DEFINE_VALUE([CURLKHSTAT_FINE])
NAU_CURL_DEFINE_VALUE([CURLKHSTAT_REJECT])
NAU_CURL_DEFINE_VALUE([CURLKHSTAT_DEFER])
NAU_CURL_DEFINE_VALUE([CURLKHSTAT_LAST])

dnl enum curl_khmatch
NAU_CURL_DEFINE_VALUE([CURLKHMATCH_OK])
NAU_CURL_DEFINE_VALUE([CURLKHMATCH_MISMATCH])
NAU_CURL_DEFINE_VALUE([CURLKHMATCH_MISSING])
NAU_CURL_DEFINE_VALUE([CURLKHMATCH_LAST])

dnl enum curl_usessl
NAU_CURL_DEFINE_VALUE([CURLUSESSL_NONE])
NAU_CURL_DEFINE_VALUE([CURLUSESSL_TRY])
NAU_CURL_DEFINE_VALUE([CURLUSESSL_CONTROL])
NAU_CURL_DEFINE_VALUE([CURLUSESSL_ALL])
NAU_CURL_DEFINE_VALUE([CURLUSESSL_LAST])

dnl enum curl_ftpccc
NAU_CURL_DEFINE_VALUE([CURLFTPSSL_CCC_NONE])
NAU_CURL_DEFINE_VALUE([CURLFTPSSL_CCC_PASSIVE])
NAU_CURL_DEFINE_VALUE([CURLFTPSSL_CCC_ACTIVE])
NAU_CURL_DEFINE_VALUE([CURLFTPSSL_CCC_LAST])

dnl curl_ftpauth
NAU_CURL_DEFINE_VALUE([CURLFTPAUTH_DEFAULT])
NAU_CURL_DEFINE_VALUE([CURLFTPAUTH_SSL])
NAU_CURL_DEFINE_VALUE([CURLFTPAUTH_TLS])
NAU_CURL_DEFINE_VALUE([CURLFTPAUTH_LAST])

dnl enum curl_ftpcreatedir
NAU_CURL_DEFINE_VALUE([CURLFTP_CREATE_DIR_NONE])
NAU_CURL_DEFINE_VALUE([CURLFTP_CREATE_DIR])
NAU_CURL_DEFINE_VALUE([CURLFTP_CREATE_DIR_RETRY])
NAU_CURL_DEFINE_VALUE([CURLFTP_CREATE_DIR_LAST])

dnl enum curl_ftpmethod
NAU_CURL_DEFINE_VALUE([CURLFTPMETHOD_DEFAULT])
NAU_CURL_DEFINE_VALUE([CURLFTPMETHOD_MULTICWD])
NAU_CURL_DEFINE_VALUE([CURLFTPMETHOD_NOCWD])
NAU_CURL_DEFINE_VALUE([CURLFTPMETHOD_SINGLECWD])
NAU_CURL_DEFINE_VALUE([CURLFTPMETHOD_LAST])

dnl CURLPROTO_ defines are for the CURLOPT_*PROTOCOLS options
NAU_CURL_DEFINE_VALUE([CURLPROTO_HTTP])
NAU_CURL_DEFINE_VALUE([CURLPROTO_HTTPS])
NAU_CURL_DEFINE_VALUE([CURLPROTO_FTP])
NAU_CURL_DEFINE_VALUE([CURLPROTO_FTPS])
NAU_CURL_DEFINE_VALUE([CURLPROTO_SCP])
NAU_CURL_DEFINE_VALUE([CURLPROTO_SFTP])
NAU_CURL_DEFINE_VALUE([CURLPROTO_TELNET])
NAU_CURL_DEFINE_VALUE([CURLPROTO_LDAP])
NAU_CURL_DEFINE_VALUE([CURLPROTO_LDAPS])
NAU_CURL_DEFINE_VALUE([CURLPROTO_DICT])
NAU_CURL_DEFINE_VALUE([CURLPROTO_FILE])
NAU_CURL_DEFINE_VALUE([CURLPROTO_TFTP])
NAU_CURL_DEFINE_VALUE([CURLPROTO_ALL])

dnl enum CURLoption
NAU_CURL_DEFINE_VALUE([CURLOPT_FILE])
NAU_CURL_DEFINE_VALUE([CURLOPT_URL])
NAU_CURL_DEFINE_VALUE([CURLOPT_PORT])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROXY])
NAU_CURL_DEFINE_VALUE([CURLOPT_USERPWD])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROXYUSERPWD])
NAU_CURL_DEFINE_VALUE([CURLOPT_RANGE])
NAU_CURL_DEFINE_VALUE([CURLOPT_INFILE])
NAU_CURL_DEFINE_VALUE([CURLOPT_ERRORBUFFER])
NAU_CURL_DEFINE_VALUE([CURLOPT_WRITEFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_READFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_TIMEOUT])
NAU_CURL_DEFINE_VALUE([CURLOPT_INFILESIZE])
NAU_CURL_DEFINE_VALUE([CURLOPT_POSTFIELDS])
NAU_CURL_DEFINE_VALUE([CURLOPT_REFERER])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTPPORT])
NAU_CURL_DEFINE_VALUE([CURLOPT_USERAGENT])
NAU_CURL_DEFINE_VALUE([CURLOPT_LOW_SPEED_LIMIT])
NAU_CURL_DEFINE_VALUE([CURLOPT_LOW_SPEED_TIME])
NAU_CURL_DEFINE_VALUE([CURLOPT_RESUME_FROM])
NAU_CURL_DEFINE_VALUE([CURLOPT_COOKIE])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTPHEADER])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTPPOST])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSLCERT])
NAU_CURL_DEFINE_VALUE([CURLOPT_KEYPASSWD])
NAU_CURL_DEFINE_VALUE([CURLOPT_CRLF])
NAU_CURL_DEFINE_VALUE([CURLOPT_QUOTE])
NAU_CURL_DEFINE_VALUE([CURLOPT_WRITEHEADER])
NAU_CURL_DEFINE_VALUE([CURLOPT_COOKIEFILE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSLVERSION])
NAU_CURL_DEFINE_VALUE([CURLOPT_TIMECONDITION])
NAU_CURL_DEFINE_VALUE([CURLOPT_TIMEVALUE])
NAU_CURL_DEFINE_VALUE([CURLOPT_CUSTOMREQUEST])
NAU_CURL_DEFINE_VALUE([CURLOPT_STDERR])
NAU_CURL_DEFINE_VALUE([CURLOPT_POSTQUOTE])
NAU_CURL_DEFINE_VALUE([CURLOPT_WRITEINFO])
NAU_CURL_DEFINE_VALUE([CURLOPT_VERBOSE])
NAU_CURL_DEFINE_VALUE([CURLOPT_HEADER])
NAU_CURL_DEFINE_VALUE([CURLOPT_NOPROGRESS])
NAU_CURL_DEFINE_VALUE([CURLOPT_NOBODY])
NAU_CURL_DEFINE_VALUE([CURLOPT_FAILONERROR])
NAU_CURL_DEFINE_VALUE([CURLOPT_UPLOAD])
NAU_CURL_DEFINE_VALUE([CURLOPT_POST])
NAU_CURL_DEFINE_VALUE([CURLOPT_DIRLISTONLY])
NAU_CURL_DEFINE_VALUE([CURLOPT_APPEND])
NAU_CURL_DEFINE_VALUE([CURLOPT_NETRC])
NAU_CURL_DEFINE_VALUE([CURLOPT_FOLLOWLOCATION])
NAU_CURL_DEFINE_VALUE([CURLOPT_TRANSFERTEXT])
NAU_CURL_DEFINE_VALUE([CURLOPT_PUT])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROGRESSFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROGRESSDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_AUTOREFERER])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROXYPORT])
NAU_CURL_DEFINE_VALUE([CURLOPT_POSTFIELDSIZE])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTPPROXYTUNNEL])
NAU_CURL_DEFINE_VALUE([CURLOPT_INTERFACE])
NAU_CURL_DEFINE_VALUE([CURLOPT_KRBLEVEL])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSL_VERIFYPEER])
NAU_CURL_DEFINE_VALUE([CURLOPT_CAINFO])
NAU_CURL_DEFINE_VALUE([CURLOPT_MAXREDIRS])
NAU_CURL_DEFINE_VALUE([CURLOPT_FILETIME])
NAU_CURL_DEFINE_VALUE([CURLOPT_TELNETOPTIONS])
NAU_CURL_DEFINE_VALUE([CURLOPT_MAXCONNECTS])
NAU_CURL_DEFINE_VALUE([CURLOPT_CLOSEPOLICY])
NAU_CURL_DEFINE_VALUE([CURLOPT_FRESH_CONNECT])
NAU_CURL_DEFINE_VALUE([CURLOPT_FORBID_REUSE])
NAU_CURL_DEFINE_VALUE([CURLOPT_RANDOM_FILE])
NAU_CURL_DEFINE_VALUE([CURLOPT_EGDSOCKET])
NAU_CURL_DEFINE_VALUE([CURLOPT_CONNECTTIMEOUT])
NAU_CURL_DEFINE_VALUE([CURLOPT_HEADERFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTPGET])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSL_VERIFYHOST])
NAU_CURL_DEFINE_VALUE([CURLOPT_COOKIEJAR])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSL_CIPHER_LIST])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTP_VERSION])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_USE_EPSV])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSLCERTTYPE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSLKEY])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSLKEYTYPE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSLENGINE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSLENGINE_DEFAULT])
NAU_CURL_DEFINE_VALUE([CURLOPT_DNS_USE_GLOBAL_CACHE])
NAU_CURL_DEFINE_VALUE([CURLOPT_DNS_CACHE_TIMEOUT])
NAU_CURL_DEFINE_VALUE([CURLOPT_PREQUOTE])
NAU_CURL_DEFINE_VALUE([CURLOPT_DEBUGFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_DEBUGDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_COOKIESESSION])
NAU_CURL_DEFINE_VALUE([CURLOPT_CAPATH])
NAU_CURL_DEFINE_VALUE([CURLOPT_BUFFERSIZE])
NAU_CURL_DEFINE_VALUE([CURLOPT_NOSIGNAL])
NAU_CURL_DEFINE_VALUE([CURLOPT_SHARE])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROXYTYPE])
NAU_CURL_DEFINE_VALUE([CURLOPT_ENCODING])
NAU_CURL_DEFINE_VALUE([CURLOPT_PRIVATE])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTP200ALIASES])
NAU_CURL_DEFINE_VALUE([CURLOPT_UNRESTRICTED_AUTH])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_USE_EPRT])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTPAUTH])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSL_CTX_FUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSL_CTX_DATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_CREATE_MISSING_DIRS])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROXYAUTH])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_RESPONSE_TIMEOUT])
NAU_CURL_DEFINE_VALUE([CURLOPT_IPRESOLVE])
NAU_CURL_DEFINE_VALUE([CURLOPT_MAXFILESIZE])
NAU_CURL_DEFINE_VALUE([CURLOPT_INFILESIZE_LARGE])
NAU_CURL_DEFINE_VALUE([CURLOPT_RESUME_FROM_LARGE])
NAU_CURL_DEFINE_VALUE([CURLOPT_MAXFILESIZE_LARGE])
NAU_CURL_DEFINE_VALUE([CURLOPT_NETRC_FILE])
NAU_CURL_DEFINE_VALUE([CURLOPT_USE_SSL])
NAU_CURL_DEFINE_VALUE([CURLOPT_POSTFIELDSIZE_LARGE])
NAU_CURL_DEFINE_VALUE([CURLOPT_TCP_NODELAY])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTPSSLAUTH])
NAU_CURL_DEFINE_VALUE([CURLOPT_IOCTLFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_IOCTLDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_ACCOUNT])
NAU_CURL_DEFINE_VALUE([CURLOPT_COOKIELIST])
NAU_CURL_DEFINE_VALUE([CURLOPT_IGNORE_CONTENT_LENGTH])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_SKIP_PASV_IP])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_FILEMETHOD])
NAU_CURL_DEFINE_VALUE([CURLOPT_LOCALPORT])
NAU_CURL_DEFINE_VALUE([CURLOPT_LOCALPORTRANGE])
NAU_CURL_DEFINE_VALUE([CURLOPT_CONNECT_ONLY])
NAU_CURL_DEFINE_VALUE([CURLOPT_CONV_FROM_NETWORK_FUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_CONV_TO_NETWORK_FUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_CONV_FROM_UTF8_FUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_MAX_SEND_SPEED_LARGE])
NAU_CURL_DEFINE_VALUE([CURLOPT_MAX_RECV_SPEED_LARGE])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_ALTERNATIVE_TO_USER])
NAU_CURL_DEFINE_VALUE([CURLOPT_SOCKOPTFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_SOCKOPTDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSL_SESSIONID_CACHE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSH_AUTH_TYPES])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSH_PUBLIC_KEYFILE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSH_PRIVATE_KEYFILE])
NAU_CURL_DEFINE_VALUE([CURLOPT_FTP_SSL_CCC])
NAU_CURL_DEFINE_VALUE([CURLOPT_TIMEOUT_MS])
NAU_CURL_DEFINE_VALUE([CURLOPT_CONNECTTIMEOUT_MS])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTP_TRANSFER_DECODING])
NAU_CURL_DEFINE_VALUE([CURLOPT_HTTP_CONTENT_DECODING])
NAU_CURL_DEFINE_VALUE([CURLOPT_NEW_FILE_PERMS])
NAU_CURL_DEFINE_VALUE([CURLOPT_NEW_DIRECTORY_PERMS])
NAU_CURL_DEFINE_VALUE([CURLOPT_POSTREDIR])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSH_HOST_PUBLIC_KEY_MD5])
NAU_CURL_DEFINE_VALUE([CURLOPT_OPENSOCKETFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_OPENSOCKETDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_COPYPOSTFIELDS])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROXY_TRANSFER_MODE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SEEKFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_SEEKDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_CRLFILE])
NAU_CURL_DEFINE_VALUE([CURLOPT_ISSUERCERT])
NAU_CURL_DEFINE_VALUE([CURLOPT_ADDRESS_SCOPE])
NAU_CURL_DEFINE_VALUE([CURLOPT_CERTINFO])
NAU_CURL_DEFINE_VALUE([CURLOPT_USERNAME])
NAU_CURL_DEFINE_VALUE([CURLOPT_PASSWORD])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROXYUSERNAME])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROXYPASSWORD])
NAU_CURL_DEFINE_VALUE([CURLOPT_NOPROXY])
NAU_CURL_DEFINE_VALUE([CURLOPT_TFTP_BLKSIZE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SOCKS5_GSSAPI_SERVICE])
NAU_CURL_DEFINE_VALUE([CURLOPT_SOCKS5_GSSAPI_NEC])
NAU_CURL_DEFINE_VALUE([CURLOPT_PROTOCOLS])
NAU_CURL_DEFINE_VALUE([CURLOPT_REDIR_PROTOCOLS])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSH_KNOWNHOSTS])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSH_KEYFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLOPT_SSH_KEYDATA])
NAU_CURL_DEFINE_VALUE([CURLOPT_LASTENTRY])

dnl enum CURL_NETRC_OPTION
NAU_CURL_DEFINE_VALUE([CURL_NETRC_IGNORED])
NAU_CURL_DEFINE_VALUE([CURL_NETRC_OPTIONAL])
NAU_CURL_DEFINE_VALUE([CURL_NETRC_REQUIRED])
NAU_CURL_DEFINE_VALUE([CURL_NETRC_LAST])

dnl enum curl_TimeCond
NAU_CURL_DEFINE_VALUE([CURL_TIMECOND_NONE])
NAU_CURL_DEFINE_VALUE([CURL_TIMECOND_IFMODSINCE])
NAU_CURL_DEFINE_VALUE([CURL_TIMECOND_IFUNMODSINCE])
NAU_CURL_DEFINE_VALUE([CURL_TIMECOND_LASTMOD])
NAU_CURL_DEFINE_VALUE([CURL_TIMECOND_LAST])

dnl enum CURLformoption
NAU_CURL_DEFINE_VALUE([CURLFORM_NOTHING])
NAU_CURL_DEFINE_VALUE([CURLFORM_COPYNAME])
NAU_CURL_DEFINE_VALUE([CURLFORM_PTRNAME])
NAU_CURL_DEFINE_VALUE([CURLFORM_NAMELENGTH])
NAU_CURL_DEFINE_VALUE([CURLFORM_COPYCONTENTS])
NAU_CURL_DEFINE_VALUE([CURLFORM_PTRCONTENTS])
NAU_CURL_DEFINE_VALUE([CURLFORM_CONTENTSLENGTH])
NAU_CURL_DEFINE_VALUE([CURLFORM_FILECONTENT])
NAU_CURL_DEFINE_VALUE([CURLFORM_ARRAY])
NAU_CURL_DEFINE_VALUE([CURLFORM_OBSOLETE])
NAU_CURL_DEFINE_VALUE([CURLFORM_FILE])
NAU_CURL_DEFINE_VALUE([CURLFORM_BUFFER])
NAU_CURL_DEFINE_VALUE([CURLFORM_BUFFERPTR])
NAU_CURL_DEFINE_VALUE([CURLFORM_BUFFERLENGTH])
NAU_CURL_DEFINE_VALUE([CURLFORM_CONTENTTYPE])
NAU_CURL_DEFINE_VALUE([CURLFORM_CONTENTHEADER])
NAU_CURL_DEFINE_VALUE([CURLFORM_FILENAME])
NAU_CURL_DEFINE_VALUE([CURLFORM_END])
NAU_CURL_DEFINE_VALUE([CURLFORM_OBSOLETE2])
NAU_CURL_DEFINE_VALUE([CURLFORM_STREAM])
NAU_CURL_DEFINE_VALUE([CURLFORM_LASTENTRY])

dnl enum CURLFORMcode
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_OK])
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_MEMORY])
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_OPTION_TWICE])
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_NULL])
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_UNKNOWN_OPTION])
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_INCOMPLETE])
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_ILLEGAL_ARRAY])
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_DISABLED])
NAU_CURL_DEFINE_VALUE([CURL_FORMADD_LAST])

dnl ?
NAU_CURL_DEFINE_VALUE([CURLINFO_STRING])
NAU_CURL_DEFINE_VALUE([CURLINFO_LONG])
NAU_CURL_DEFINE_VALUE([CURLINFO_DOUBLE])
NAU_CURL_DEFINE_VALUE([CURLINFO_SLIST])
NAU_CURL_DEFINE_VALUE([CURLINFO_MASK])
NAU_CURL_DEFINE_VALUE([CURLINFO_TYPEMASK])

dnl enum CURLINFO
NAU_CURL_DEFINE_VALUE([CURLINFO_NONE])
NAU_CURL_DEFINE_VALUE([CURLINFO_EFFECTIVE_URL])
NAU_CURL_DEFINE_VALUE([CURLINFO_RESPONSE_CODE])
NAU_CURL_DEFINE_VALUE([CURLINFO_TOTAL_TIME])
NAU_CURL_DEFINE_VALUE([CURLINFO_NAMELOOKUP_TIME])
NAU_CURL_DEFINE_VALUE([CURLINFO_CONNECT_TIME])
NAU_CURL_DEFINE_VALUE([CURLINFO_PRETRANSFER_TIME])
NAU_CURL_DEFINE_VALUE([CURLINFO_SIZE_UPLOAD])
NAU_CURL_DEFINE_VALUE([CURLINFO_SIZE_DOWNLOAD])
NAU_CURL_DEFINE_VALUE([CURLINFO_SPEED_DOWNLOAD])
NAU_CURL_DEFINE_VALUE([CURLINFO_SPEED_UPLOAD])
NAU_CURL_DEFINE_VALUE([CURLINFO_HEADER_SIZE])
NAU_CURL_DEFINE_VALUE([CURLINFO_REQUEST_SIZE])
NAU_CURL_DEFINE_VALUE([CURLINFO_SSL_VERIFYRESULT])
NAU_CURL_DEFINE_VALUE([CURLINFO_FILETIME])
NAU_CURL_DEFINE_VALUE([CURLINFO_CONTENT_LENGTH_DOWNLOAD])
NAU_CURL_DEFINE_VALUE([CURLINFO_CONTENT_LENGTH_UPLOAD])
NAU_CURL_DEFINE_VALUE([CURLINFO_STARTTRANSFER_TIME])
NAU_CURL_DEFINE_VALUE([CURLINFO_CONTENT_TYPE])
NAU_CURL_DEFINE_VALUE([CURLINFO_REDIRECT_TIME])
NAU_CURL_DEFINE_VALUE([CURLINFO_REDIRECT_COUNT])
NAU_CURL_DEFINE_VALUE([CURLINFO_PRIVATE])
NAU_CURL_DEFINE_VALUE([CURLINFO_HTTP_CONNECTCODE])
NAU_CURL_DEFINE_VALUE([CURLINFO_HTTPAUTH_AVAIL])
NAU_CURL_DEFINE_VALUE([CURLINFO_PROXYAUTH_AVAIL])
NAU_CURL_DEFINE_VALUE([CURLINFO_OS_ERRNO])
NAU_CURL_DEFINE_VALUE([CURLINFO_NUM_CONNECTS])
NAU_CURL_DEFINE_VALUE([CURLINFO_SSL_ENGINES])
NAU_CURL_DEFINE_VALUE([CURLINFO_COOKIELIST])
NAU_CURL_DEFINE_VALUE([CURLINFO_LASTSOCKET])
NAU_CURL_DEFINE_VALUE([CURLINFO_FTP_ENTRY_PATH])
NAU_CURL_DEFINE_VALUE([CURLINFO_REDIRECT_URL])
NAU_CURL_DEFINE_VALUE([CURLINFO_PRIMARY_IP])
NAU_CURL_DEFINE_VALUE([CURLINFO_APPCONNECT_TIME])
NAU_CURL_DEFINE_VALUE([CURLINFO_CERTINFO])
NAU_CURL_DEFINE_VALUE([CURLINFO_CONDITION_UNMET])
NAU_CURL_DEFINE_VALUE([CURLINFO_LASTONE])

NAU_CURL_DEFINE_VALUE([CURLINFO_HTTP_CODE])

dnl enum curl_closepolicy
NAU_CURL_DEFINE_VALUE([CURLCLOSEPOLICY_NONE])
NAU_CURL_DEFINE_VALUE([CURLCLOSEPOLICY_OLDEST])
NAU_CURL_DEFINE_VALUE([CURLCLOSEPOLICY_LEAST_RECENTLY_USED])
NAU_CURL_DEFINE_VALUE([CURLCLOSEPOLICY_LEAST_TRAFFIC])
NAU_CURL_DEFINE_VALUE([CURLCLOSEPOLICY_SLOWEST])
NAU_CURL_DEFINE_VALUE([CURLCLOSEPOLICY_CALLBACK])
NAU_CURL_DEFINE_VALUE([CURLCLOSEPOLICY_LAST])

dnl enum curl_lock_data
NAU_CURL_DEFINE_VALUE([CURL_LOCK_DATA_NONE])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_DATA_SHARE])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_DATA_COOKIE])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_DATA_DNS])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_DATA_SSL_SESSION])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_DATA_CONNECT])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_DATA_LAST])

dnl enum curl_lock_access
NAU_CURL_DEFINE_VALUE([CURL_LOCK_ACCESS_NONE])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_ACCESS_SHARED])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_ACCESS_SINGLE])
NAU_CURL_DEFINE_VALUE([CURL_LOCK_ACCESS_LAST])

dnl enum CURLSHcode
NAU_CURL_DEFINE_VALUE([CURLSHE_OK])
NAU_CURL_DEFINE_VALUE([CURLSHE_BAD_OPTION])
NAU_CURL_DEFINE_VALUE([CURLSHE_IN_USE])
NAU_CURL_DEFINE_VALUE([CURLSHE_INVALID])
NAU_CURL_DEFINE_VALUE([CURLSHE_NOMEM])
NAU_CURL_DEFINE_VALUE([CURLSHE_LAST])

dnl enum CURLSHoption
NAU_CURL_DEFINE_VALUE([CURLSHOPT_NONE])
NAU_CURL_DEFINE_VALUE([CURLSHOPT_SHARE])
NAU_CURL_DEFINE_VALUE([CURLSHOPT_UNSHARE])
NAU_CURL_DEFINE_VALUE([CURLSHOPT_LOCKFUNC])
NAU_CURL_DEFINE_VALUE([CURLSHOPT_UNLOCKFUNC])
NAU_CURL_DEFINE_VALUE([CURLSHOPT_USERDATA])
NAU_CURL_DEFINE_VALUE([CURLSHOPT_LAST])

dnl enum CURLversion
NAU_CURL_DEFINE_VALUE([CURLVERSION_FIRST])
NAU_CURL_DEFINE_VALUE([CURLVERSION_SECOND])
NAU_CURL_DEFINE_VALUE([CURLVERSION_THIRD])
NAU_CURL_DEFINE_VALUE([CURLVERSION_FOURTH])
NAU_CURL_DEFINE_VALUE([CURLVERSION_LAST])

NAU_CURL_DEFINE_VALUE([CURLVERSION_NOW])

dnl version codes
NAU_CURL_DEFINE_VALUE([CURL_VERSION_IPV6])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_KERBEROS4])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_SSL])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_LIBZ])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_NTLM])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_GSSNEGOTIATE])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_DEBUG])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_ASYNCHDNS])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_SPNEGO])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_LARGEFILE])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_IDN])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_SSPI])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_CONV])
NAU_CURL_DEFINE_VALUE([CURL_VERSION_CURLDEBUG])

dnl enum CURLMcode
NAU_CURL_DEFINE_VALUE([CURLM_CALL_MULTI_PERFORM])
NAU_CURL_DEFINE_VALUE([CURLM_OK])
NAU_CURL_DEFINE_VALUE([CURLM_BAD_HANDLE])
NAU_CURL_DEFINE_VALUE([CURLM_BAD_EASY_HANDLE])
NAU_CURL_DEFINE_VALUE([CURLM_OUT_OF_MEMORY])
NAU_CURL_DEFINE_VALUE([CURLM_INTERNAL_ERROR])
NAU_CURL_DEFINE_VALUE([CURLM_BAD_SOCKET])
NAU_CURL_DEFINE_VALUE([CURLM_UNKNOWN_OPTION])
NAU_CURL_DEFINE_VALUE([CURLM_LAST])

dnl enum CURLMSG
NAU_CURL_DEFINE_VALUE([CURLMSG_NONE])
NAU_CURL_DEFINE_VALUE([CURLMSG_DONE])
NAU_CURL_DEFINE_VALUE([CURLMSG_LAST])

dnl enum CURLMoption
NAU_CURL_DEFINE_VALUE([CURLMOPT_SOCKETFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLMOPT_SOCKETDATA])
NAU_CURL_DEFINE_VALUE([CURLMOPT_PIPELINING])
NAU_CURL_DEFINE_VALUE([CURLMOPT_TIMERFUNCTION])
NAU_CURL_DEFINE_VALUE([CURLMOPT_TIMERDATA])
NAU_CURL_DEFINE_VALUE([CURLMOPT_MAXCONNECTS])
NAU_CURL_DEFINE_VALUE([CURLMOPT_LASTENTRY])


dnl page
dnl --------------------------------------------------------------------
dnl Done.
dnl --------------------------------------------------------------------

AC_CONFIG_FILES([../src/libraries/foreign/net/curl/sizeof.sls:src/libraries/foreign/net/curl/sizeof.sls.in])
DS_CONFIG_FILE_SLACKWARE_BIN_DESC
DS_CONFIG_FILE_SLACKWARE_DOC_DESC
NAUSICAA_END
DS_END

### end of file
